--- a/product-management-app/package.json
+++ b/product-management-app/package.json
@@ -16,8 +16,10 @@
     "jquery": "^3.7.1",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-scripts": "^3.0.1",
+    "react-table": "^7.8.0",
     "tailwindcss": "^3.4.15",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
